--- a/sap.cabal
+++ b/sap.cabal
@@ -24,6 +24,10 @@ common common-options
     text,
     bytestring ^>= 0.11,
     containers,
+    random ^>= 1.2,
+    mtl ^>= 2.2,
+    optics-extra,
+    optics-core,
   default-language:
     Haskell2010
 
